--- a/src/main/resource/lang/bundle_en_US.properties
+++ b/src/main/resource/lang/bundle_en_US.properties
@@ -3,6 +3,8 @@
 setProduction=Set Production Amount as...
 fixedAmount=Fixed Amount
 rate=Rate
+minute=per Minute
+second=per Second
 
 autoComplete=Automatically Complete Flowchart
 clear=Clear Flowchart
